# diff

./: CMakeLists.txt  main.c
psmoveapi/: CMakeCache.txt  Makefile  cmake_install.cmake
psmoveapi-4.0.10/src/: hidapi.h
